복구된 1차  디버깅 완료